Added Grunt to package.json. Fixes #113.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/pluginkollektiv/cachify/"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-uglify": "^0.9.1",
     "load-grunt-tasks": "^3.4.1"
