Update pluginkollektiv homepage in composer.json

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     {
       "name": "pluginkollektiv",
-      "homepage": "http://pluginkollektiv.org"
+      "homepage": "https://github.com/pluginkollektiv"
     }
   ],
   "keywords": [
