--- a/.gitattributes
+++ b/.gitattributes
@@ -2,11 +2,11 @@
 /.github export-ignore
 /.wordpress-org export-ignore
 /node_modules export-ignore
+/vendor export-ignore
 
 # Files
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/Gruntfile.js export-ignore
 /composer.json export-ignore
 /package.json export-ignore
