--- a/.gitattributes
+++ b/.gitattributes
@@ -8,5 +8,6 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.stylelintrc.json export-ignore
 /composer.json export-ignore
 /package.json export-ignore
