--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,10 @@
     "matthiasmullie/minify": "^1.3"
   },
   "scripts": {
+    "lint-css": [
+      "npx stylelint css/dashboard.css",
+      "npx stylelint css/settings.css"
+    ],
     "minify": [
       "minifycss css/dashboard.css > css/dashboard.min.css",
       "minifycss css/settings.css > css/settings.min.css"
