remove minified assets from SCM
Minification is now handled by Composer in post-install routine.
Therefore add a Composer step to the automatic deployment action.

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,15 @@
     "matthiasmullie/minify": "^1.3"
   },
   "scripts": {
+    "post-install-cmd": [
+      "@build"
+    ],
+    "post-update-cmd": [
+      "@build"
+    ],
+    "build": [
+      "@minify"
+    ],
     "lint-css": [
       "npx stylelint css/dashboard.css",
       "npx stylelint css/settings.css"
