--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
+/.phpcs.xml
 /.stylelintrc.json export-ignore
 /composer.json export-ignore
 /package.json export-ignore
