--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
     "composer/installers": "~1.0"
   },
   "require-dev": {
-    "matthiasmullie/minify": "^1.3"
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.6",
+    "matthiasmullie/minify": "^1.3",
+    "phpcompatibility/php-compatibility": "^9",
+    "squizlabs/php_codesniffer": "^3.5",
+    "wp-coding-standards/wpcs": "^2"
   },
   "scripts": {
     "post-install-cmd": [
@@ -41,6 +45,9 @@
     "lint-css": [
       "npx stylelint css/dashboard.css",
       "npx stylelint css/settings.css"
+    ],
+    "lint-php": [
+      "phpcs --standard=phpcs.xml -s"
     ],
     "minify": [
       "minifycss css/dashboard.css > css/dashboard.min.css",
