add .distignore for automatic deployment control
To deploy minified CSS/JS resources we cannot rely on .gitattributes,
because the action uses "git archive" which does not recognize the
generated files, as they are ignored by .gitignore

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /vendor export-ignore
 
 # Files
+/.distignore
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
