--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,20 @@
   "require": {
     "php": ">=5.2.0",
     "composer/installers": "~1.0"
+  },
+  "require-dev": {
+    "matthiasmullie/minify": "^1.3"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "@build"
+    ],
+    "post-update-cmd": [
+      "@build"
+    ],
+    "build": [
+      "minifycss css/dashboard.css > css/dashboard.min.css",
+      "minifycss css/settings.css > css/settings.min.css"
+    ]
   }
 }
