--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,11 @@
     "composer/installers": "~1.0"
   },
   "require-dev": {
-    "matthiasmullie/minify": "^1.3"
+    "dealerdirect/phpcodesniffer-composer-installer": "^v0.7",
+    "matthiasmullie/minify": "^1.3",
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpcompatibility/phpcompatibility-wp": "^2.1",
+    "wp-coding-standards/wpcs": "^2.3"
   },
   "scripts": {
     "post-install-cmd": [
