--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 /vendor export-ignore
 
 # Files
+/.distignore export-ignore
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
