--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "stylelint-config-wordpress",
+  "extends": "@wordpress/stylelint-config",
   "rules": {
     "declaration-property-unit-whitelist": null,
     "selector-id-pattern": null
