Add code style check and build script (#202)
* Add minify script, remove *.min.css

* Add code style check for CSS, fix existing violations

* Add code style check for PHP (WP CS + PHP compatibility)

* Rename files and variables according to WP code style

* Escape output according to WP code style, fix multiple assignments and prepared statement

* Fix input sanitization errors

* Update GitHub actions to include composer install

* Use latest version of the composer action, simply nonce sanitization

* Fix .gitattributes, add .distignore

* add .distignore to .gitattributes export-ignore

* update NPM dev dependencies

Co-authored-by: Stefan Kalscheuer <stefan@stklcode.de>

--- a/package.json
+++ b/package.json
@@ -1,15 +1,7 @@
 {
-  "name": "cachify",
-  "version": "2.3.0",
-  "description": "Easy to use WordPress caching plugin. Serving static blog pages from database, disk, Memcached or APC.",
-  "author": "Pluginkollektiv",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pluginkollektiv/cachify/"
-  },
+  "private": true,
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "load-grunt-tasks": "^3.4.1"
+    "stylelint": "^13.9.0",
+    "@wordpress/stylelint-config": "^19.0.1"
   }
 }
