--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,40 @@
   "require": {
     "php": ">=5.2.0",
     "composer/installers": "~1.0"
+  },
+  "require-dev": {
+    "dealerdirect/phpcodesniffer-composer-installer": "^v0.7",
+    "matthiasmullie/minify": "^1.3",
+    "squizlabs/php_codesniffer": "^3.5",
+    "phpcompatibility/phpcompatibility-wp": "^2.1",
+    "wp-coding-standards/wpcs": "^2.3"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "@build"
+    ],
+    "post-update-cmd": [
+      "@build"
+    ],
+    "build": [
+      "minifycss css/dashboard.css > css/dashboard.min.css",
+      "minifycss css/settings.css > css/settings.min.css"
+    ],
+    "cs": [
+      "@lint-php"
+    ],
+    "csfix": [
+      "phpcbf --standard=phpcs.xml"
+    ],
+    "lint-all": [
+      "@lint-php",
+      "@lint-css"
+    ],
+    "lint-css": [
+      "npx stylelint css/dashboard.css css/settings.css"
+    ],
+    "lint-php": [
+      "phpcs --standard=phpcs.xml -s"
+    ]
   }
 }
