remove Composer and NPM lockfiles (dev-only)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Code style checks for PHP and CSS
         run: |
           composer install
-          npm ci
+          npm install
           composer lint-all
