use filemtime for cache busting, removed cachify prefixes from js, wrapped js in anon function, added eslint, fixed lint errors

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "private": true,
   "devDependencies": {
     "stylelint": "^13.13.1",
+    "eslint": "^8.4.1",
+    "@wordpress/eslint-plugin": "^9.0.4",
     "@wordpress/stylelint-config": "^19.0.5"
   }
 }
