specify allow-plugins in Composer configuration
We use third party plugins to install PHPCS rulesets. Explicitly
allow them to run which is recommended as of Composer 2.2 and will
be required in future releases.

--- a/composer.json
+++ b/composer.json
@@ -58,5 +58,11 @@
     "lint-php": [
       "phpcs --standard=phpcs.xml -s"
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "composer/installers": true
+    }
   }
 }
