migrate dashboard icons to icon-font
Using a font instead of custom inline-svg all default dashboard styles
are applied to the Cachify icons, too.

Convert the current icons into a font using IcoMoon app and adjust the
output accordingly. Preserve original SVG files, but do not distribute.

Inline WOFF2 to prevent additional requests for most modern browsers.

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "@wordpress/stylelint-config",
   "rules": {
+    "font-family-no-missing-generic-family-keyword": null,
     "selector-id-pattern": null
   }
 }
