--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^v0.7",
     "matthiasmullie/minify": "^1.3",
+    "phpunit/phpunit": "^5|^7|^9",
     "squizlabs/php_codesniffer": "^3.7",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
-    "wp-coding-standards/wpcs": "^2.3"
+    "wp-coding-standards/wpcs": "^2.3",
+    "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
     "post-install-cmd": [
@@ -63,6 +65,9 @@
     ],
     "lint-php": [
       "phpcs --standard=phpcs.xml -s"
+    ],
+    "test": [
+      "phpunit"
     ]
   },
   "config": {
