--- a/composer.json
+++ b/composer.json
@@ -23,15 +23,15 @@
   },
   "require": {
     "php": ">=5.6",
-    "composer/installers": "~1.0"
+    "composer/installers": "^v1|^v2"
   },
   "require-dev": {
     "dealerdirect/phpcodesniffer-composer-installer": "^v1.0",
     "matthiasmullie/minify": "^1.3",
     "phpunit/phpunit": "^5|^7|^9",
-    "squizlabs/php_codesniffer": "^3.7",
+    "squizlabs/php_codesniffer": "^3.9",
     "phpcompatibility/phpcompatibility-wp": "^2.1",
-    "wp-coding-standards/wpcs": "^3.0",
+    "wp-coding-standards/wpcs": "^3.1",
     "yoast/phpunit-polyfills": "^2.0"
   },
   "scripts": {
