--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 # Files
 /.distignore export-ignore
 /.editorconfig export-ignore
+/.eslintrc.json export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.stylelintrc.json export-ignore
